--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,6 @@ html, body {
 
 #main-container {
     background-color: #131316;
-    display: grid;
-    grid-template-rows: 1fr 9fr;
     font-family: Roboto, sans-serif;
     height: 100%;
 }
@@ -23,18 +21,34 @@ html, body {
 #player-display-container {
     padding-top: 10px;
     display: flex;
-    gap: 20px;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
+}
+
+.player-display {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#player-two-display{
+    height: 130px;
+}
+
+.player-indicator {
+    width: 100%;
+    height: 5px;
+    background-color: #c2ffe7;
+    margin-top: 5px;
+    border-radius: 10px;
 }
 
 #game-grid {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
-
     gap: 20px;
-
+    cursor: none;
 }
 
 .cell {
@@ -47,6 +61,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: none;
 }
 
 .cell i {
@@ -66,4 +81,36 @@ i[icon="playerTwo"] {
 
 i[type="hover"] {
     opacity: 0.50;
+}
+
+#game-summary {
+    background-color: #131316;
+    border: 2px solid #c2ffe7;
+    border-radius: 20px;
+}
+
+#game-summary::backdrop {
+    background-color: rgba(88, 88, 88, 0.228);
+}
+
+#summary-contents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px
+}
+
+#winner-display {
+    color: #c2ffe7;
+}
+
+#play-again-button {
+    width: calc(100% - 20px);
+    height: 40px;
+    background-color: #c2ffe7;
+    border-radius: 10px;
+    border: none;
+    color: #131316;
+    font-weight: bold;
+    cursor: pointer;
 }
